
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u64 ;



void
ia64_patch (u64 insn_addr, u64 mask, u64 val)
{
 u64 m0, m1, v0, v1, b0, b1, *b = (u64 *) (insn_addr & -16);

 unsigned long shift;

 b0 = b[0]; b1 = b[1];
 shift = 5 + 41 * (insn_addr % 16);
 if (shift >= 64) {
  m1 = mask << (shift - 64);
  v1 = val << (shift - 64);
 } else {
  m0 = mask << shift; m1 = mask >> (64 - shift);
  v0 = val << shift; v1 = val >> (64 - shift);
  b[0] = (b0 & ~m0) | (v0 & m0);
 }
 b[1] = (b1 & ~m1) | (v1 & m1);
}
